kubernetes/mademe-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mademe
  labels:
    name: mademe
